Fixing z-indexes on homepage

--- a/source/stylesheets/custom.css.sass
+++ b/source/stylesheets/custom.css.sass
@@ -95,8 +95,8 @@ html
     background: linear-gradient(top, #16218c, #000075)
     text-shadow: 0 -1px 0 black
     top: 0
-    z-index: 998
     height: 44px
+    z-index: 101
     a
       display: block
       color: white
@@ -130,7 +130,7 @@ html
       left: 19px
       height: 22px
       width: 163px
-      z-index: 100
+      z-index: 102
       .banner
         font-size: 11px
         background: url('/images/centennial-banner.png') no-repeat center center
@@ -157,7 +157,7 @@ html
     background: linear-gradient(top, white, #f5f5f3)
     top: 44px
     color: #BBB
-    z-index: 99
+    z-index: 100
     .container_12
       padding: 11px 0
     a
@@ -267,7 +267,7 @@ html
       height: 330px
       width: 460px
       position: absolute
-      z-index: 500
+      z-index: 50
       cursor: pointer
     .slideshow
       height: 330px
